Add some jasmine tests using karma

--- a/public/js/dashboard/dashboard.html
+++ b/public/js/dashboard/dashboard.html
@@ -6,7 +6,7 @@
 		<th>Latitude</th>
 		<th>Longitude</th>
 	</thead>
-	<tr ng-repeat="station in stations">
+	<tr ng-repeat="station in vm.stations">
 		<td>{{station.number}}</td>
 		<td>{{station.address}}</td>
 		<td>{{station.municipality}}</td>
